--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -218,7 +218,7 @@
     "tag": {
       "deleted": "Deleted",
       "failed": "Connection failed.\nPlease try again.",
-      "hidden": "Hidden",
+      "reported": "Reported",
       "lastConnected": "Last connected {{date}}",
       "reportedAs": "Reported as {{flag}}",
       "waiting": "Waiting"
