--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -474,7 +474,7 @@
       "groups": "Groups",
       "justMet": "Just met",
       "mutualConnections": "Mutual Connections",
-      "created": "BrightID created {{date}}",
+      "created": "Joined BrightID {{date}}",
       "rating": "How well do you know this connection?",
       "recovery": "Recovery",
       "reported": "Reported",
