--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -120,7 +120,8 @@
         "lostKeys": "Please create a new BrightID or try recovering your previous BrightID",
         "passwordMatch": "Password and confirm password does not match.",
         "passwordShort": "Your password must be at least 8 characters long.",
-        "trustedSigned": "One of your recovery connections signed your request"
+        "trustedSigned": "One of your recovery connections signed your request",
+        "failedOp": "{{name}} failed!\n{{message}}",
       },
       "title": {
         "lostKeys": "We've lost the BrightID keypair from the device",
@@ -261,17 +262,18 @@
       }
     },
     "button": {
+      "skip": "Skip & do it later",
       "createGroup": "Create Group",
       "next": "Next"
     },
     "label": {
-      "cofounders": "CO-FOUNDERS"
+      "invitees": "INVITEES"
     },
     "placeholder": {
       "groupName": "What is the group name?"
     },
     "text": {
-      "cofounders": "To create a group, you must select two co-founders",
+      "invitees": "Invite group members",
       "noConnections": "No connections"
     }
   },
