--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -52,7 +52,7 @@
         "linkApp": "Do you want to link your account in {{context}} to your BrightID?",
         "linkFailure": "Failed to link your account in {{context}} to your BrightID\n{{result}}",
         "linkSuccess": "Succesfully linked your account in {{context}} to your BrightID",
-        "blindSigNotFound": "No blind sig found for {{app}}",
+        "blindSigNotFound": "No blind sig found for {{app}}"
       },
       "title": {
         "invalidApp": "Failed",
@@ -67,7 +67,7 @@
       "noApps": "No Apps",
       "notSponsored": "You're not sponsored.\nPlease find an app below to sponsor you.",
       "pendingLink": "Linking your account in {{context}} to your BrightID…",
-      "sponsoring": "{{app}} is sponsoring you…",
+      "sponsoring": "{{app}} is sponsoring you…"
     }
   },
   "backup": {
