--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -54,7 +54,8 @@
         "linkApp": "Do you want to link your account in {{context}} to your BrightID?",
         "linkFailure": "Failed to link your account in {{context}} to your BrightID\n{{result}}",
         "linkSigFailed": "Error linking verification {{verification}} to app {{appId}}. Error message: {{msg}}",
-        "linkSuccess": "Succesfully linked your account in {{context}} to your BrightID"
+        "linkSuccess": "Succesfully linked your account in {{context}} to your BrightID",
+        "missingBlindSig": "No blind sig found for app {{appId}}. Verifications missing: {{missingVerifications}}. Verifications already linked: {{linkedVerifications}}"
       },
       "title": {
         "invalidApp": "Failed",
