fix trailing comma

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -301,7 +301,7 @@
       "copyExplorerCode": "Copy Explorer Code",
       "editProfile": "Edit Profile",
       "home": "Home",
-      "groups": "Groups",
+      "groups": "Groups"
     }
   },
   "eula": {
