--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -4,9 +4,9 @@
       "description": "Get sponsored by linking with an app that offers sponsorship",
       "title": "Get sponsored"
     },
-    "joinConnectionParty": {
-      "description": "Join a BrightID connection party",
-      "title": "Connection party"
+    "joinMeet": {
+      "description": "Join a BrightID meet",
+      "title": "BrightID meet"
     },
     "linkApp": {
       "description": "Link your BrightID with an app",
@@ -246,7 +246,7 @@
       "website": "Website"
     },
     "text": {
-      "meet": "Join a BrightID connection party!",
+      "meet": "Join a BrightID meet!",
       "openSource": "open source!",
       "weAre": "We are "
     },
