add possible duplicates of a connection to connection details screen

--- a/BrightID/locales/de/translation.json
+++ b/BrightID/locales/de/translation.json
@@ -197,7 +197,8 @@
     "label": {
       "connectionLevel": "Verbindungsstufe",
       "mutualConnections": "Gemeinsame Verbindungen",
-      "mutualGroups": "Gemeinsame Gruppen"
+      "mutualGroups": "Gemeinsame Gruppen",
+      "possibleDuplicates": "Mögliche Duplikate"
     },
     "tags": {
       "connectedAt": "Verbunden {{date}}",
