--- a/BrightID/locales/zh_Hans/translation.json
+++ b/BrightID/locales/zh_Hans/translation.json
@@ -193,7 +193,8 @@
     "label": {
       "connectionLevel": "联系人熟悉程度",
       "mutualConnections": "共同联系人",
-      "mutualGroups": "共同群组"
+      "mutualGroups": "共同群组",
+      "possibleDuplicates": "可能的重复"
     },
     "tags": {
       "connectedAt": "建立联系的 {{date}}",
