--- a/BrightID/locales/zh_Hant/translation.json
+++ b/BrightID/locales/zh_Hant/translation.json
@@ -172,7 +172,8 @@
     "label": {
       "connectionLevel": "連接級別",
       "mutualConnections": "互相連接",
-      "mutualGroups": "關聯團隊"
+      "mutualGroups": "關聯團隊",
+      "possibleDuplicates": "可能的重複"
     },
     "tags": {
       "connectedAt": "已連接{{date}}",
