--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -186,6 +186,7 @@
       "mutualConnections": "Mutual Connections",
       "mutualGroups": "Mutual Groups",
       "possibleDuplicates": "Possible Duplicates",
+      "socialMedia": "Social Media",
       "recoveryConnections": "Recovery Connections"
     },
     "tags": {
