--- a/BrightID/locales/fr/translation.json
+++ b/BrightID/locales/fr/translation.json
@@ -212,7 +212,8 @@
       "mutualConnections": "Connexions en Commun",
       "mutualGroups": "Groupes en Commun",
       "recoveryConnections": "Connexions de récupération",
-      "possibleDuplicates": "Doublons Possibles"
+      "possibleDuplicates": "Doublons Possibles",
+      "socialMedia": "Média social"
     },
     "tags": {
       "connectedAt": "Connecté(e) {{date}}",
