--- a/BrightID/locales/hi/translation.json
+++ b/BrightID/locales/hi/translation.json
@@ -194,7 +194,8 @@
       "connectionLevel": "कनेक्शन की लेवल",
       "mutualConnections": "आपसी कनेक्शन",
       "mutualGroups": "आपसी ग्रुप",
-      "possibleDuplicates": "संभावित डुप्लिकेट"
+      "possibleDuplicates": "संभावित डुप्लिकेट",
+      "socialMedia": "सामाजिक मीडिया"
     },
     "tags": {
       "connectedAt": "कनेक्ट {{date}}",
