--- a/BrightID/locales/es/translation.json
+++ b/BrightID/locales/es/translation.json
@@ -203,6 +203,7 @@
       "loading": "Cargando…"
     },
     "text": {
+      "copied": "Copiado al portapapeles!",
       "level": "¿Qué tan bien conoces a {{name}}?",
       "levelAlreadyKnown": "Ya conozco a esta persona",
       "levelJustMet": "Esta persona es un extraño que acabo de conocer",
