--- a/BrightID/locales/fa/translation.json
+++ b/BrightID/locales/fa/translation.json
@@ -184,6 +184,7 @@
       "loading": "درحال بارگیری…"
     },
     "text": {
+      "copied": "کپی شد!",
       "level": "چقدر {{name}} رو میشناسی؟",
       "levelAlreadyKnown": "از قبل میشناسم",
       "levelJustMet": "این شخص غریبه ایست که تازه ملاقاتش کردم",
