--- a/BrightID/locales/hi/translation.json
+++ b/BrightID/locales/hi/translation.json
@@ -202,6 +202,7 @@
       "loading": "लोड हो रहा है…"
     },
     "text": {
+      "copied": "क्लिपबोर्ड से कॉपी करे!",
       "level": "आप {{name}} को कितनी अच्छी तरह से जानते हो?",
       "levelAlreadyKnown": "मैं इस व्यक्ति को पहले से जानता हूं",
       "levelJustMet": "यह व्यक्ति एक अजनबी है जो मुझे अभी मिला है",
