--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -194,6 +194,7 @@
       "loading": "Loading…"
     },
     "text": {
+      "copied": "Copied to clipboard!",
       "level": "How well do you know {{name}}?",
       "levelAlreadyKnown": "I already know this person",
       "levelJustMet": "This person is a stranger I just met",
