--- a/BrightID/locales/fr/translation.json
+++ b/BrightID/locales/fr/translation.json
@@ -220,6 +220,7 @@
       "loading": "Chargement…"
     },
     "text": {
+      "copied": "Code copié !",
       "level": "À quel point connaissez-vous {{name}} ?",
       "levelAlreadyKnown": "Je connais cette personne",
       "levelJustMet": "Je viens de rencontrer cette personne",
