--- a/BrightID/locales/ru/translation.json
+++ b/BrightID/locales/ru/translation.json
@@ -215,6 +215,7 @@
       "loading": "Загрузка…"
     },
     "text": {
+      "copied": "Скопировано в буфер обмена!",
       "level": "Насколько хорошо ты знаешь {{name}}?",
       "levelAlreadyKnown": "Я знаю этого человека",
       "levelJustMet": "Этот человек - незнакомец, которого я только что встретил",
