--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -598,9 +598,18 @@
       "title": "Import Account"
     },
     "text": {
-      "additionalInfo": "This QR code should be scanned using  your other device to import your BrightID into this one",
+      "additionalInfo": "This QR code should be scanned using your other device to import your BrightID into this one",
       "askScanning": "Please scan this QR code using your other device",
       "waitImporting": "Importing connections, please wait ...",
+    }
+  },
+  "sync": {
+    "header": {
+      "title": "Sync devices"
+    },
+    "text": {
+      "additionalInfo": "This QR code should be scanned using your other device to sync data between them",
+      "askScanning": "Please scan this QR code using your other device",
     }
   },
   "recovery": {
@@ -722,14 +731,18 @@
     "button": {
       "submit": "Submit",
     },
-    "text": {
-      "confirmTitle": "Confirmation",
-      "confirm": "Are you sure that you want to export your BrightID into another device?",
-      "confirmRemoveTitle": "Confirmation",
+    "alert": {
+      "confirmAdd": "Are you sure that you want to export your BrightID into another device?",
       "confirmRemove": "Are you sure that you want to remove your BrightID from \"{{name}}\"?",
+      "noPrimary": "Your devices can only be synced by the primary device.",
+      "bothPrimary": "Both devices configured as primary devices. You can only have a single primary device. Configure one of the devices as secondary to be able to sync them.",
+    },
+    "text": {
       "whatsDeviceName": "Please choose a name for the new device",
       "listDescription": "Your BrightID is available on following devices:",
       "waitingForExport": "Exporting connections, please wait ...",
+      "syncCompleted": "Your device synced successfully.",
+      "waitSyncing": "Syncing devices, please wait ...",
     },
     "placeholder": {
       "deviceName": "Device Name",
