--- a/BrightID/locales/de/translation.json
+++ b/BrightID/locales/de/translation.json
@@ -570,7 +570,8 @@
       "newPasswordAgain": "Passwort wiederholen",
       "password": "Passwort",
       "passwordAgain": "Passwort wiederholen",
-      "socialMediaLink": "Social Media Verknüpfung"
+      "socialMediaLink": "Social Media Verknüpfung",
+      "phoneNumber": "Telefonnummer"
     },
     "placeholder": {
       "name": "Namen eingeben",
