add/update phone number

--- a/BrightID/locales/en/translation.json
+++ b/BrightID/locales/en/translation.json
@@ -576,7 +576,8 @@
       "newPassword": "New password",
       "newPasswordAgain": "Repeat password",
       "password": "Password",
-      "socialMediaLink": "Social Media Link"
+      "socialMediaLink": "Social Media Link",
+      "phoneNumber": "Phone Number"
     },
     "placeholder": {
       "name": "Enter Name",
