--- a/BrightID/locales/hi/translation.json
+++ b/BrightID/locales/hi/translation.json
@@ -531,7 +531,8 @@
       },
       "text": {
         "discardChanges": "आपके पास सहेजे नहीं गए परिवर्तन हैं। क्या आप वाकई उन्हें छोड़ना चाहते हैं और स्क्रीन छोड़ना चाहते हैं?",
-        "passwordMatch": "वर्तमान पासवर्ड मेल नहीं खाता है।"
+        "passwordMatch": "वर्तमान पासवर्ड मेल नहीं खाता है।",
+        "invalidPhoneNumber": "एक मान्य फ़ोन नंबर दर्ज करें"
       },
       "title": {
         "discardChanges": "परिवर्तनों को निरस्त करें?",
