--- a/BrightID/locales/ca/translation.json
+++ b/BrightID/locales/ca/translation.json
@@ -33,5 +33,12 @@
     "label": {
       "email": "Correu-e"
     }
+  },
+  "profile": {
+    "alert": {
+      "text": {
+        "invalidPhoneNumber": "Enter a valid phone number"
+      }
+    }
   }
 }
