--- a/BrightID/locales/fa/translation.json
+++ b/BrightID/locales/fa/translation.json
@@ -494,7 +494,8 @@
       },
       "text": {
         "discardChanges": "تغییرات را ذخیره نکردی. مطمئنی میخوای از صفحه خارج بشی؟",
-        "passwordMatch": "رمزعبور فعلی مطابقت ندارد."
+        "passwordMatch": "رمزعبور فعلی مطابقت ندارد.",
+        "invalidPhoneNumber": "یک شماره تلفن معتبر وارد کنید"
       },
       "title": {
         "discardChanges": "رد کردن تغییرات؟",
