--- a/BrightID/locales/ru/translation.json
+++ b/BrightID/locales/ru/translation.json
@@ -564,7 +564,8 @@
       },
       "text": {
         "discardChanges": "У вас есть несохраненные изменения. Вы уверены, что хотите сбросить их и покинуть экран?",
-        "passwordMatch": "Текущий пароль не совпадает."
+        "passwordMatch": "Текущий пароль не совпадает.",
+        "invalidPhoneNumber": "Введите действительный номер телефона"
       },
       "title": {
         "discardChanges": "Отменить изменения?",
